test/test_examples/syntactic_examples/syntax_error/error_statement_101.zig
// Syntax error: missing condition left bracket

const ifj = @import("ifj24.zig");

pub fn main() void {
    var x: i32 = 32;
    const y : i32 = 89;

    while y < x)
    {
        processItem(1458242);
    }
}